--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 <h1>Welcome to the Fitness webapp!</h1>
-<p>Click <a th:href="@{/application}">here</a> to continue to the app as a user.</p>
-<p>Click <a th:href="@{/admin}">here</a> to continue to the admin console.</p>
-<p>Click <a th:href="@{/coach}">here</a> to follow your clients as a coach.</p>
+<!--<p>Click <a th:href="@{/application}">here</a> to continue to without login.</p>-->
+<p>Click <a th:href="@{/clientpage}">here</a> if you are a client.</p>
+<p>Click <a th:href="@{/coachpage}">here</a> if you are a coach.</p>
+<p>Click <a th:href="@{/adminpage}">here</a> to continue to the admin console.</p>
+
 </body>
 </html>
