--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
 >
@@ -12,9 +13,15 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
+
     <div><label> Username : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
+
 </html>
+
+<script>
+    console.log("tugba")
+</script>
