--- a/src/main/resources/templates/application.html
+++ b/src/main/resources/templates/application.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1 th:inline="text">Welcome Dear Visitor. </h1>
-<p>You can find general information on this page. </p>
-<p> Please login in order to access your account</p>
+<p>You can find general information about our services on this page. </p>
+<p> Please login in order to have full access to this website</p>
 
 </body>
 </html>
