front end makeup

--- a/src/main/resources/templates/application.html
+++ b/src/main/resources/templates/application.html
@@ -5,9 +5,9 @@
     <title>FitnessApp - Welcome</title>
 </head>
 <body>
-<h1 th:inline="text">Welcome Dear Visitor. </h1>
+<h1 th:inline="text">Welcome Dear Visitor </h1>
 <p>You can find general information about our services on this page. </p>
-<p> Please login in order to have full access to this website</p>
+<p> Please login to access full site. </p>
 
 </body>
 </html>
