--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,11 @@
     <title>Fitness Webapp</title>
 </head>
 <body>
-<h1>Welcome to the Fitness webapp!</h1>
-<p>Click <a th:href="@{/application}">here</a> to continue to without login.</p>
-<p>Click <a th:href="@{/clientpage}">here</a> if you are a client.</p>
-<p>Click <a th:href="@{/coachpage}">here</a> if you are a coach.</p>
-<p>Click <a th:href="@{/adminpage}">here</a> to continue to the admin console.</p>
+<h1>Welcome to the FitnessApp!</h1>
+<p>Click <a th:href="@{/application}">here</a> to continue without login.</p>
+<p>Click <a th:href="@{/clientpage}">here</a> if you are a CLIENT.</p>
+<p>Click <a th:href="@{/coachpage}">here</a> if you are a COACH.</p>
+<p>Click <a th:href="@{/adminpage}">here</a> to continue as ADMIN.</p>
 <p>Click <a th:href="@{/logout}">here</a> to logout</p>
 
 </body>
